Release v1.6.1
